[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
description = "Work with environment specific property files."
documentation = "https://docs.rs/vidar"
homepage = "https://github.com/aesir-vanir/vidar"
keywords = ["environment", "properties", "files"]
license = "MIT/Apache-2.0"
name = "vidar"
readme = "README.md"
repository = "https://github.com/aesir-vanir/vidar"
version = "0.1.0"

[dependencies]
derive_builder = "0.5.1"
error-chain = "0.11.0-rc.2"
getset = "0.0.5"

[replace]
"derive_builder:0.5.1" = { path = "../rust-derive-builder/derive_builder" }
